fix: warning 뜨는 부분 수정